@@ -10,9 +10,9 @@
         {pageaddvar name="stylesheet" value="$stylepath/fluid960gs/$layout.css"}
         {pageaddvar name="stylesheet" value="$stylepath/style.css"}
         {browserhack condition="if IE 6" assign="ieconditional"}<link rel="stylesheet" type="text/css" href="{$stylepath}/fluid960gs/ie6.css" media="screen" />{/browserhack}
-        {pageaddvar name='rawtext' value=$ieconditional}
+        {pageaddvar name='header' value=$ieconditional}
         {browserhack condition="if IE 7" assign="ieconditional"}<link rel="stylesheet" type="text/css" href="{$stylepath}/fluid960gs/ie.css" media="screen" />{/browserhack}
-        {pageaddvar name='rawtext' value=$ieconditional}
+        {pageaddvar name='header' value=$ieconditional}
     </head>
     <body>
 
